# mcp-server-habu

./: .gitignore  API_COVERAGE_ANALYSIS.md  BATCH_EXECUTION_TESTING_LOG.md  BREAKTHROUGH_SUMMARY.md  CLEAN_ROOM_CREATION_PLAN.md  COMPREHENSIVE_TESTING_PLAN.md  CREDENTIAL_ENHANCEMENT_SUMMARY.md  CURRENT_STATUS.md  DEVELOPMENT_GUIDE.md  DISTRIBUTION_PACKAGE_SUMMARY.md  DOCS_OVERHAUL_PROJECT.md  HABU_MCP_COMPREHENSIVE_PLAN.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  LICENSE  LOCAL_VS_GITHUB_WORKFLOW.md  MCP_SERVER_CONFIGURATION.md  MCP_SERVER_DISTRIBUTION_GUIDE.md  MCP_TOOLS_REFERENCE.md  MCP_TOOLS_REFERENCE_DETAILED.md  MCP_TOOL_TESTING_STATUS.md  MILESTONE_4_REMAINING_TOOLS_PLAN.md  NEW_WIZARDS_COMPLETION_SUMMARY.md  PHASE1_ENHANCEMENT_COMPLETE.md  PHASE2_DOCUMENT_CATEGORIZATION.md  PHASE2_ENHANCEMENT_PLAN.md  PRIVATE_REPO_MIGRATION_PLAN.md  PRIVATE_REPO_SUCCESS_TEST.md  PROJECT_PLAN.md  REACT_WEBSITE_GUIDE.md  README.md  RESTORATION_PLAN.md  RULES.md  STATUS.json  TESTING_PROGRESS.md  UUID_AUDIT_REPORT.md  WIZARD_DEVELOPMENT_PROGRESS.md  analyze-partition-requirements.js  audit_uuid_tools.py  check-crq-138029-runs.js  configure_railway.py  (+20 more)
.memex/: rules.md  setup.json
archive/: AWS_S3_DATA_CONNECTION_PLAN.md  BIGQUERY_CONNECTION_TOOL_PLAN.md  COMPREHENSIVE_TESTING_PLAN.md  CRITICAL_BUG_FIX_COMPLETE.md  DATA_SOURCE_COVERAGE_ANALYSIS.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_CLEANUP_PLAN.md  MCP_TOOL_TESTING_STATUS.md  MILESTONE_1_PARTNER_COLLABORATION.md  MILESTONE_4_REMAINING_TOOLS_PLAN.md  NEW_CONNECTION_WIZARDS_PLAN.md  PHASE2_ENHANCEMENT_PLAN.md  REACT_WEBSITE_GUIDE.md  README_HISTORICAL_CONTENT.md  RULES.md  SMART_DETECTION_BREAKTHROUGH.md  STREAMLIT_ENHANCEMENT_COMPLETE.md  STREAMLIT_SHOWCASE_README.md  TESTING_PROGRESS.md  UUID_AUDIT_REPORT.md  WIZARD_DEVELOPMENT_PROGRESS.md  debug-invitations.md  deprecated-bearer-server.ts
config/: liveramp-clean-room-api-specification.yml
dashboard/: DEPLOYMENT.md  (+1 more)
dashboard-project/: DASHBOARD_DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS.md  FORCE_DEPLOY_TIMESTAMP.txt  README.md  configure_railway.md  configure_railway.py  debugging_progress.md  final_debugging_summary.md  force_push.py  get_railway_token.py  get_token.py  push_dashboard.sh
development/: ADVANCED_CLEANUP_SUMMARY.md  CLUTTER_CLEANUP_SUMMARY.md  GITHUB_CLEANLINESS_RULES.md  README.md  ULTRA_CLEAN_SUMMARY.md  package-lock.json  package.json  pyproject.toml
development/archive/: ENHANCED_PLATFORM_VALIDATION.md  FINAL_ANALYSIS_SUMMARY.md  HIGH_VALUE_ADDITIONS_PLAN.md  INTERACTIVE_MCP_GUIDE.md  MISSION_ACCOMPLISHED.md  README.md
development/dashboard-project/: README-dashboard-focused.md
development/dashboard-project/dashboard/backend/: .railwayignore
development/dashboard-project/dashboard/frontend/src/: index.css
development/dashboard-project/documentation/: MANUAL_SETUP.md
development/debugging-scripts/: debug-question-run-params.js  demo-new-tools.js  test-credential-scenarios.js
development/docs/: MCP_TOOLS_REFERENCE_DETAILED.md
development/scripts/: generate-status-json.js  validate-consistency.js
development/tools/: audit_uuid_tools.py  test_gh.py
(+72 files in other folders)
